header height fixed & some spacing adjustments

--- a/components/ExportPdf/ExportPdfButton.module.scss
+++ b/components/ExportPdf/ExportPdfButton.module.scss
@@ -5,7 +5,6 @@
 
 .export {
     padding: spacing.$spacing-xs;
-    margin-left: spacing.$spacing-xs;
     border-radius: spacing.$spacing-base;
     border: size.$sp01 solid color.$white;
     background: color.$green;
@@ -13,5 +12,11 @@
 
     @include breakpoint.media-breakpoint-up(md) {
         padding: spacing.$spacing-xs;
+        transition: all 0.3s ease-in;
+
+        &:hover {
+            scale: 0.95;
+            transition: all 0.3s ease-in-out;
+        }
     }
 }
